Avoid overflow in mailed code

--- a/XDG_CONFIG_HOME/email.css
+++ b/XDG_CONFIG_HOME/email.css
@@ -23,6 +23,9 @@ blockquote {
   margin: 0 0 0 1.4ch;
   padding: 0 0 0 1.4ch;
 }
+pre {
+  min-width: max-content;
+}
 blockquote > p,
 blockquote > h1,
 blockquote > h2,
